Added inital redux, reducer, action and store

--- a/docker-compose-backup.yml
+++ b/docker-compose-backup.yml
@@ -3,7 +3,9 @@ version: '3.8'
 services:
 
   reactapp:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile
     volumes:
       - './src:/usr/src/app/src'
     ports:
