--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "workbox-streams": "^5.1.3"
   },
   "scripts": {
-    "start": "env-cmd -f .env react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
