--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "concurrently": "^4.0.1",
-    "nodemon": "^1.19.1"
+    "nodemon": "^1.19.1",
+    "react-scripts": "^4.0.3"
   }
 }
