--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
   },
   "devDependencies": {
     "concurrently": "^4.0.1",
-    "nodemon": "^1.19.1",
-    "react-scripts": "^4.0.3"
+    "nodemon": "^1.19.1"
   }
 }
