--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "crwn-clothing-server",
   "version": "1.0.0",
   "engines": {
-    "node": "10.16.2",
+    "node": "15.14.0",
     "npm": "6.9.0"
   },
   "scripts": {
-    "client": "cd client && yarn start",
+    "client": "cd client",
     "server": "nodemon server.js",
     "build": "cd client && npm run build",
     "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\"",
